--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,4 @@
 {% set version = '0.8' %}
-
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,29 +9,38 @@ package:
 source:
   fn: markdown_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/markdown_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/markdown/markdown_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/markdown_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/markdown/markdown_{{ version }}.tar.gz
   sha256: 538fd912b2220f2df344c6cca58304ce11e0960de7bd7bd573b3385105d48fed
 
 build:
   merge_build_host: True  # [win]
-  number: 2
+  number: 3
   skip: true  # [win32]
+
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
-    - posix                # [win]
-    - {{ compiler('c') }}        # [unix]
-    - {{ compiler('m2w64_c') }}  # [win]
+    - {{ compiler('c') }}        # [not win]
+    - {{native}}toolchain        # [win]
+    - {{posix}}filesystem        # [win]
+    - {{posix}}make
+    - {{posix}}sed  # [win]
+    - {{posix}}coreutils  # [win]
+    - {{posix}}sed               # [win]
+    - {{posix}}coreutils         # [win]
+    - {{posix}}zip               # [win]
+
   host:
     - r-base
     - r-mime >=0.3
 
   run:
     - r-base
+    - {{native}}gcc-libs         # [win]
     - r-mime >=0.3
     - xorg-libxrender 0.9.10
 
@@ -49,8 +57,13 @@ about:
     other formats. See http://en.wikipedia.org/wiki/Markdown for more information about
     'Markdown'.
   license_family: GPL2
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'  # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-2'  # [win]
 
 extra:
   recipe-maintainers:
     - johanneskoester
     - bgruening
+    - daler
+    - jdblischak
+    - cbrueffer
