--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -52,8 +52,7 @@ about:
     other formats. See http://en.wikipedia.org/wiki/Markdown for more information about
     'Markdown'.
   license_family: GPL2
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'  # [unix]
-  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-2'  # [win]
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
 
 extra:
   recipe-maintainers:
