--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.0' %}
+{% set version = '1.1' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -10,11 +10,11 @@ source:
   url:
     - {{ cran_mirror }}/src/contrib/markdown_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/markdown/markdown_{{ version }}.tar.gz
-  sha256: 172d8072d1829644ee6cdf54282a55718e2cfe9c9915d3589ca5f9a016f8d9a6
+  sha256: 8d8cd47472a37362e615dbb8865c3780d7b7db694d59050e19312f126e5efc1b
 
 build:
   merge_build_host: True  # [win]
-  number: 1
+  number: 0
   rpaths:
     - lib/R/lib/
     - lib/
@@ -31,10 +31,12 @@ requirements:
   host:
     - r-base
     - r-mime >=0.3
+    - r-xfun
   run:
     - r-base
     - {{native}}gcc-libs         # [win]
     - r-mime >=0.3
+    - r-xfun
 
 test:
   commands:
@@ -58,11 +60,11 @@ extra:
 # Package: markdown
 # Type: Package
 # Title: Render Markdown with the C Library 'Sundown'
-# Version: 1.0
+# Version: 1.1
 # Authors@R: c( person("JJ", "Allaire", role = "aut"), person("Jeffrey", "Horner", role = "aut"), person("Yihui", "Xie", role = c("aut", "cre"), email = "xie@yihui.name", comment = c(ORCID = "0000-0003-0645-5666")), person("Henrik", "Bengtsson", role = "ctb"), person("Jim", "Hester", role = "ctb"), person("Yixuan", "Qiu", role = "ctb"), person("Kohske", "Takahashi", role = "ctb"), person("Adam", "November", role = "ctb"), person("Nacho", "Caballero", role = "ctb"), person("Jeroen", "Ooms", role = "ctb"), person("Thomas", "Leeper", role = "ctb"), person("Joe", "Cheng", role = "ctb"), person("Andrzej", "Oles", role = "ctb"), person("Vicent", "Marti", role = c("aut", "cph"), comment = "The Sundown library"), person("Natacha", "Porte", role = c("aut", "cph"), comment = "The Sundown library"), person(family = "RStudio", role = "cph") )
 # Description: Provides R bindings to the 'Sundown' Markdown rendering library (<https://github.com/vmg/sundown>). Markdown is a plain-text formatting syntax that can be converted to 'XHTML' or other formats. See <http://en.wikipedia.org/wiki/Markdown> for more information about Markdown.
 # Depends: R (>= 2.11.1)
-# Imports: utils, mime (>= 0.3)
+# Imports: utils, xfun, mime (>= 0.3)
 # Suggests: knitr, RCurl
 # License: GPL-2
 # URL: https://github.com/rstudio/markdown
@@ -71,8 +73,8 @@ extra:
 # RoxygenNote: 6.1.1
 # Encoding: UTF-8
 # NeedsCompilation: yes
-# Packaged: 2019-06-07 14:17:03 UTC; yihui
+# Packaged: 2019-08-07 15:59:28 UTC; yihui
 # Author: JJ Allaire [aut], Jeffrey Horner [aut], Yihui Xie [aut, cre] (<https://orcid.org/0000-0003-0645-5666>), Henrik Bengtsson [ctb], Jim Hester [ctb], Yixuan Qiu [ctb], Kohske Takahashi [ctb], Adam November [ctb], Nacho Caballero [ctb], Jeroen Ooms [ctb], Thomas Leeper [ctb], Joe Cheng [ctb], Andrzej Oles [ctb], Vicent Marti [aut, cph] (The Sundown library), Natacha Porte [aut, cph] (The Sundown library), RStudio [cph]
 # Maintainer: Yihui Xie <xie@yihui.name>
 # Repository: CRAN
-# Date/Publication: 2019-06-07 19:00:15 UTC
+# Date/Publication: 2019-08-07 16:30:02 UTC
