--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -46,13 +46,14 @@ test:
 
 about:
   home: https://github.com/rstudio/markdown
-  license: GPL-2
+  license: GPL-2.0-only
   summary: Provides R bindings to the 'Sundown' Markdown rendering library (<https://github.com/vmg/sundown>).
     Markdown is a plain-text formatting syntax that can be converted to 'XHTML' or other
     formats. See <http://en.wikipedia.org/wiki/Markdown> for more information about
     Markdown.
   license_family: GPL2
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
 
 extra:
   recipe-maintainers:
